Fix: remove unused parameter and import miw-upm/goa#41